css/oc-design.css
/* 
    Created on : 14 janv. 2018, 16:17:20
    Author     : latour4
    Description: Style of the OpenCharity website
*/

/*==========================
 General styles
===========================*/
body{
    margin: 0;
    padding: 0;
    font-family: "Open Sans";
}

h1, h2, h3, h4, h5, h6{
    font-family: "Museo Sans";
    font-weight: 200;
}

section {
    padding: 16px 0 40px 0;
}

.oc-section__separator{
    height: 1px;
    width: 100%;
    border-top: 1px solid #e1e2e5;
    margin: 0 16px;
}
/*===========================
OpenCharity Min frameWork
===========================*/

.oc-container {
    width: 100%;
    margin: auto;
}

@media screen and ( min-width: 425px ) {
    .oc-container {
        max-width: 403px;
    }
}

@media screen and ( min-width: 768px ) {
    .oc-container {
        max-width: 736px;
    }
}

@media screen and ( min-width: 1024px) {
    .oc-container {
        max-width: 992px;
    }
}

@media screen and (min-width: 1440px) {
    .oc-container{
        max-width: 1260px;
    }
}

.oc-row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.oc-laptop__col--9, .oc-laptop__col--3, .oc-laptop__col--4, .oc-laptop__col--6 {
    position: relative;
    width: 100%;
    min-height: 1px;
    padding-right: 16px;
    padding-left: 16px;
}

.oc-laptop__col--6{
    width: calc(50% - 32px);
}

.oc-laptop__col--4 {
    width: calc( 33.333333333% - 32px);
}

.oc-laptop__col--3 {
    width: calc( 25% - 32px );
}
.oc-laptop__col--9{
    width: calc(75% - 32px);
}

/*===========================
OpenCharity components
===========================*/

/* --------- Header ---------- */
.oc-navigation {
    width: 100%;
    margin: 0;
    background-color: #fff;
    padding: 32px 0;
}

.oc-logo{
    width: 100%;
}

.oc-logo img{
    width: 70%;
}

.oc-main__menu{
    text-align: right;
}

.oc-menu__item{
    text-transform: uppercase;
    text-decoration: none;
    color: #565659;
    padding: 16px;
}

.oc-button {
    padding: 8px 24px;
    border: 2px solid #18c4d9;
    color: #18c4d9;
    font-size: 0.875em;
    text-transform: uppercase;
}


/* Open Charity Hero */
.oc-hero{
    margin: 0;
    padding: 96px 0;
    background-image: url(../Images/hero.jpg);
    background-position: center top;
    background-size: cover;
    height: auto;
    text-align: center;
    color: #fff;
}

.oc-hero__title{
    font-size: 3.5em;
    text-transform: uppercase;
}

.oc-hero__description{
    margin: 0 auto;
    font-size: 18px;
    font-weight: lighter;
    max-width: 90%;
}

/* Open Charity events module style*/
.oc-event{
    background: #f1f2f5;
    padding-top: 16px;
}

.oc-event p{
    margin-top: 0;
}
.oc-event h3{
    margin-bottom: 0;
}

.oc-event__details{
    font-family: "Museo Sans";
}

.oc-event__registration{
    text-align: center;
    display: table;
}

.oc-event__registration a{
   text-decoration: none;   
   display: table-cell;
   vertical-align: middle;
}

.oc-event__date{
    color: #565659;
    font-size: 1.1em;
    font-weight: 400;
}

.oc-event__title{
    font-size: .92em;
    color: #64697f;
}

.oc-event__date span{
    color: #18c4d9;
}

.oc-event__registration .oc-button{
    background-color: #18c4d9;
    color: #565659;
    text-transform: uppercase;
    font-size: .875em;
    color: #fff;
}

/* ---- Get involved section ------*/
.oc-getinvolved__cards{
    align-items: stretch;
}
.oc-section__header {
    padding: 16px;
    text-align: center;
    width: calc(100% - 32px);
    margin: 0 auto;
}

.oc-section__header h2{
    text-transform: uppercase;
    font-size: 1.8em;
    margin-top: 0;

}

.oc-section__header h2, .oc-card__title h3{
    font-weight: 400;
    color: #565659;
}

.oc-card {
    text-align: center;
    position: relative;
    width: 100%;
}

.oc-card__title{
    text-transform: uppercase;
}

.oc-card__image{
    position: relative;
    width: 100%;
    min-height: 100px;
    padding: 16px 0;
}

.oc-card__image img{
    position: absolute;
    width: 40%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.oc-card__title{
    text-transform: uppercase;
    color: #64697f;
}

.oc-card__text{
    font-size: 0.9em;
    color: #64697f;
    margin-bottom: 32px;
}

.oc-card__action .oc-button{
    text-decoration: none;
    display: block;
    width: 60%;
    margin: auto;
}

/* ---- Mission section ------*/

.oc-mission{
    background: #f1f2f5;
}

.oc-mission .oc-section__header{
    margin-bottom: 64px;
}

.oc-mission .oc-container{
    width: 103.067484663%;
}

.oc-mission__cards{
    align-items: stretch;
    padding-bottom: 40px;
}


.oc-mission__card{
    position: relative;
    text-align: center;
    background:  #fff;
    border-radius: 5px;
    padding: 16px;
    width: calc(30.3571428571% - 32px);
    margin: 0 1.4880952381%;
}

.oc-mission__card-icon{
    width: 30%;
    border-radius: 50%;
    position: absolute;
    bottom: 70%;
    left: 50%;
    transform: translate(-55%, 0%);
    border: 15px solid #fff;
}

.oc-mission__card-icon img{
    width: 100%;
    margin: auto;
    display: block;
}

.oc-mission__card-title{
    color: #18c4d9;
    padding-top:  40px;
}

.oc-mission__card-text{
    color: #64697f;
    font-size: .875em;
}

/* ---- Open Charity Blog section ------*/
.oc-post__title{
    font-size: .95em;
    color: #18c4d9;
    font-weight: bold;
        padding-bottom: 8px;
}

.oc-post__excerpt{
    font-size: .9em;
    color: #64697f;
    padding-bottom: 32px;
}

.oc-post__title, .oc-post__excerpt{
    border-bottom: 1px solid #f3f4f6;
}

.oc-post__date{
    color: #64697f;
    font-size: .9em;
}
/* ---- Open Members section ------*/
.oc-members{
    background-color: #f1f2f5;
    position: relative;
}

.oc-members__logos{
    position: relative;
}
.oc-member{
    width: calc(20% - 64px);
    margin-right: 32px;
    margin-left: 32px;
    height: 80px;
    display: inline-block;
    position: relative;
}

.oc-member img{
    width: auto;
    max-width: 100%;
    max-height: 90%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/* ---- Open Charity footer section ------*/

.oc-social a{
    text-decoration: none;
    font-size: 1.5em;
    font-weight: bold;
}

.oc-footer {
    background-color: #454850;
    padding-top: 32px;
    padding-bottom: 16px;
    color: #9399b4;
    text-align: center;
}

.oc-footer a{
    color: #18c4d9;
    text-decoration: none;
}

.oc-social{
    padding-bottom: 16px;
    border-bottom: 1px solid #4e5159;
}

.oc-social span{
    padding: 8px 16px;
}

.oc-copyright {
    font-size: .8em;
}

/*==========================
 BREAKPOINTS
===========================*/
@media screen and ( min-width: 0 ) and ( max-width: 425px) {
    
    .oc-mobile__col--12 {
        width: calc( 100% - 32px );
        margin-bottom: 40px;
    }
    
    .oc-navigation{
        display: none;
    }
    
}

@media screen and ( min-width: 426px ) and ( max-width: 768px ) {
    .oc-tablet__col--6 {
        width: calc( 50% - 32px );
        margin-bottom: 40px;
    }
    
    .oc-tablet__col--12 {
        width: calc( 100% - 32px );
        margin-bottom: 40px;
    }
}

@media screen and ( min-width: 769px ) and ( max-width: 1024px) {
    
}

@media screen and ( min-width: 1025px ) and ( max-width: 1440px ) {
    
}

